--- a/maze1/resources.qrc
+++ b/maze1/resources.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/">
     <file>asset/apple.png</file>
+    <file>asset/portal.png</file>
 </qresource>
 </RCC>
-
